--- a/character.html
+++ b/character.html
@@ -23,16 +23,16 @@
 		<!-- Nav -->
 		<nav id="menu">
 			<ul class="links">
-				<li><a href="index.html">Home</a></li>
+				<li><a href="index.html">Inicio</a></li>
 				<li><a class='dropdown-arrow'>Genshin Impact</a>
 					<ul class='sub-menus'>
-					  <li><a href="introduction.html">- Introduction</a></li>
-					  <li><a href="character.html">- Character</a></li>
-					  <li><a href="weapon.html">- Weapons</a></li>
-					  <li><a href="artifacts.html">- Artifacts</a></li>
+					  <li><a href="introduction.html">- Introducción</a></li>
+					  <li><a href="character.html">- Personajes</a></li>
+					  <li><a href="weapon.html">- Armas</a></li>
+					  <li><a href="artifacts.html">- Artefactos</a></li>
 					</ul>
 				  </li>
-				<li><a href="contact.html">Contact</a></li>
+				<li><a href="contact.html">Contacto</a></li>
 			</ul>
 		</nav>
 
@@ -1260,11 +1260,11 @@
 			<footer id="footer">
 				<div class="container">
 					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<!-- <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li> -->
 						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="#" class="icon fa-youtube-play"><span class="label">youtube</span></a></li>
-						<li><a href="#" class="icon fa-twitch"><span class="label">twitch</span></a></li>
-						<li><a href="#" class="icon fa-github"><span class="label">github</span></a></li>
+						<!-- <li><a href="#" class="icon fa-twitch"><span class="label">twitch</span></a></li>
+						<li><a href="#" class="icon fa-github"><span class="label">github</span></a></li> -->
 					</ul>
 				</div>
 				<div class="copyright">
