--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<div class="logo"><a href="index.html">IceSakura <span>Game Wiki</span></a></div>
+				<div class="logo"><a href="index.html">IceSakura <span> Wiki</span></a></div>
 				<a href="#menu">Menu</a>
 			</header>
 
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="index.html">Home</a></li>
+					<li><a href="index.html">Inicio</a></li>
 					<li><a class='dropdown-arrow'>Genshin Impact</a>
 						<ul class='sub-menus'>
-						  <li><a href="introduction.html">- Introduction</a></li>
-						  <li><a href="character.html">- Character</a></li>
-						  <li><a href="weapon.html">- Weapons</a></li>
-						  <li><a href="artifacts.html">- Artifacts</a></li>
+						  <li><a href="introduction.html">- Introducción</a></li>
+						  <li><a href="character.html">- Personajes</a></li>
+						  <li><a href="weapon.html">- Armas</a></li>
+						  <li><a href="artifacts.html">- Artefactos</a></li>
 						</ul>
 					  </li>
-					<li><a href="contact.html">Contact</a></li>
+					<li><a href="contact.html">Contacto</a></li>
 				</ul>
 			</nav>
 
@@ -43,7 +43,7 @@
 					<div class="inner">
 						<header>
 							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
-							<h2 class="text-size">Welcome to </br>IceSakura Game Wiki</h2>
+							<h2 class="text-size">Bienvenido a </br>IceSakura Wiki</h2>
 						</header>
 					</div>
 				</article>
@@ -53,7 +53,7 @@
 					<div class="inner">
 						<header>
 							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
-							<h2>Welcome to </br>IceSakura Game Wiki</h2>
+							<h2 class="text-size">Bienvenido a </br>IceSakura Wiki</h2>
 						</header>
 					</div>
 				</article>
@@ -63,7 +63,7 @@
 					<div class="inner">
 						<header>
 							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
-							<h2>Welcome to </br>IceSakura Game Wiki</h2>
+							<h2 class="text-size">Bienvenido a </br>IceSakura Wiki</h2>
 						</header>
 					</div>
 				</article>
@@ -73,7 +73,7 @@
 					<div class="inner">
 						<header>
 							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
-							<h2>Welcome to </br>IceSakura Game Wiki</h2>
+							<h2 class="text-size">Bienvenido a </br>IceSakura Wiki</h2>
 						</header>
 					</div>
 				</article>
@@ -83,7 +83,7 @@
 					<div class="inner">
 						<header>
 							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
-							<h2>Welcome to </br>IceSakura Game Wiki</h2>
+							<h2 class="text-size">Bienvenido a </br>IceSakura Wiki</h2>
 						</header>
 					</div>
 				</article>
@@ -93,7 +93,7 @@
 					<div class="inner">
 						<header>
 							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
-							<h2>Welcome to </br>IceSakura Game Wiki</h2>
+							<h2 class="text-size">Bienvenido a </br>IceSakura Wiki</h2>
 						</header>
 					</div>
 				</article>
@@ -102,7 +102,7 @@
 					<div class="inner">
 						<header>
 							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
-							<h2>Welcome to </br>IceSakura Game Wiki</h2>
+							<h2 class="text-size">Bienvenido a </br>IceSakura Wiki</h2>
 						</header>
 					</div>
 				</article>
@@ -111,7 +111,7 @@
 					<div class="inner">
 						<header>
 							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
-							<h2 class="span">Welcome to </br>IceSakura Game Wiki</h2>
+							<h2 class="text-size">Bienvenido a </br>IceSakura Wiki</h2>
 						</header>
 					</div>
 				</article>
@@ -121,7 +121,7 @@
 					<div class="inner">
 						<header>
 							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
-							<h2>Welcome to </br>IceSakura Game Wiki</h2>
+							<h2 class="text-size">Bienvenido a </br>IceSakura Wiki</h2>
 						</header>
 					</div>
 				</article>
@@ -132,7 +132,7 @@
 				<div class="inner">
 					<header>
 						<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
-						<h2>Welcome to </br>IceSakura Game Wiki</h2>
+						<h2 class="text-size">Bienvenido a </br>IceSakura Wiki</h2>
 					</header>
 				</div>
 			</article>
@@ -143,7 +143,7 @@
 			<div class="inner">
 				<header>
 					<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
-					<h2>Welcome to </br>IceSakura Game Wiki</h2>
+					<h2 class="text-size">Bienvenido a </br>IceSakura Wiki</h2>
 				</header>
 			</div>
 		</article>
@@ -160,8 +160,8 @@
 		<!-- One -->
 			<section id="one" class="wrapper style2">
 				<header class="align-center">
-					<p class="special">IceSakura Game Wiki</p>
-					<h2 class="special2">Articles </h2>
+					<p class="special">IceSakura Wiki</p>
+					<h2 class="special2">Artículos </h2>
 				</header>
 				<div class="inner">
 					<div class="grid-style">
@@ -305,7 +305,8 @@
 			</section> -->
 
 		<!-- Three -->
-			<section id="three" class="wrapper style2">
+
+			<!-- <section id="three" class="wrapper style2">
 				<div class="inner">
 					<header class="align-center">
 						<p class="special">IceSakura Game Wiki</p>
@@ -416,18 +417,18 @@
 						</div></a>
 					</div>
 				</div>
-			</section>
+			</section> -->
 
 
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="container">
 					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<!-- <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li> -->
 						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="#" class="icon fa-youtube-play"><span class="label">youtube</span></a></li>
-						<li><a href="#" class="icon fa-twitch"><span class="label">twitch</span></a></li>
-						<li><a href="#" class="icon fa-github"><span class="label">github</span></a></li>
+						<!-- <li><a href="#" class="icon fa-twitch"><span class="label">twitch</span></a></li>
+						<li><a href="#" class="icon fa-github"><span class="label">github</span></a></li> -->
 					</ul>
 				</div>
 				<div class="copyright">
